--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	
     <script type="text/javascript" src="./script.js">
 </script>
-
+<button onclick="fizzBuzz()">Run FizzBuzz</button>
 </body>
 
 </html>
